test/fixtures/for_unit_tests/daemon_set.yml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: ds-app
  generation: 2
  uid: 'c31a9b4e-e6dd-11e9-8f47-e6322f98393a'
spec:
  selector:
    matchLabels:
      app: ds-app
      name: ds-app
  templateGeneration: 2
  template:
    metadata:
      labels:
        app: ds-app
        name: ds-app
    spec:
      containers:
      - name: app
        image: busybox
        imagePullPolicy: IfNotPresent
        command: ["tail", "-f", "/dev/null"]
        ports:
        - containerPort: 80
status:
  currentNumberScheduled: 2
  desiredNumberScheduled: 2
  numberAvailable: 2
  numberMisscheduled: 0
  numberReady: 2
  observedGeneration: 2
  updatedNumberScheduled: 1
