test/fixtures/for_unit_tests/deployment_test.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web
  uid: foobar
  generation: 2
  annotations:
    "deployment.kubernetes.io/revision": "1"
  labels:
    name: web
    app: hello-cloud
spec:
  replicas: 3
  progressDeadlineSeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      name: web
      app: hello-cloud
  template:
    metadata:
      labels:
        name: web
        app: hello-cloud
    spec:
      containers:
      - name: app
        image: busybox
status:
  replicas: 3
  observedGeneration: 2 # current
  conditions:
  - type: Progressing
    status: True
    lastUpdateTime: "2018-01-09 22:56:45 UTC"

---
apiVersion: apps/v1beta1
kind: ReplicaSet
metadata:
  name: web-1
  generation: 1
  labels:
    name: web
    app: hello-cloud
  annotations:
    "deployment.kubernetes.io/revision": "1"
  ownerReferences:
    - uid: foobar
spec:
  replicas: 3
  selector:
    matchLabels:
      name: web
      app: hello-cloud
  template:
    metadata:
      labels:
        name: web
        app: hello-cloud
    spec:
      containers:
      - name: app
        image: busybox
status:
  observedGeneration: 1
  replicas: 3
