test/fixtures/for_unit_tests/service_test.yml
---
apiVersion: v1
kind: Service
metadata:
  name: external-name
spec:
  type: ExternalName
  externalName: external-redis.shopify
---
apiVersion: v1
kind: Service
metadata:
  name: standard
spec:
  selector:
    type: standard
---
apiVersion: v1
kind: Service
metadata:
  name: selectorless
spec:
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: standard
  labels:
    type: standard
spec:
  replicas: 2
  selector:
    matchLabels:
      type: standard
  template:
    metadata:
      labels:
        type: standard
    spec:
      containers:
      - name: app
        image: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: some-pod-1
  labels:
    type: standard
spec:
  containers:
    - name: hello-cloud
      image: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: some-pod-2
  labels:
    type: standard
spec:
  containers:
    - name: hello-cloud
      image: busybox
---
apiVersion: v1
kind: Service
metadata:
  name: zero-replica
spec:
  selector:
    type: zero-replica
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zero-replica
  labels:
    type: zero-replica
spec:
  replicas: 0
  selector:
    matchLabels:
      type: zero-replica
  template:
    metadata:
      labels:
        type: zero-replica
    spec:
      containers:
      - name: app
        image: busybox
---
apiVersion: v1
kind: Service
metadata:
  name: zero-replica-multiple
spec:
  selector:
    type: zero-replica-multiple
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zero-replica-multiple-1
  labels:
    type: zero-replica-multiple
spec:
  replicas: 0
  selector:
    matchLabels:
      type: zero-replica-multiple
  template:
    metadata:
      labels:
        type: zero-replica-multiple
    spec:
      containers:
      - name: app
        image: busybox
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zero-replica-multiple-2
  labels:
    type: zero-replica-multiple
spec:
  replicas: 0
  selector:
    matchLabels:
      type: zero-replica-multiple
  template:
    metadata:
      labels:
        type: zero-replica-multiple
    spec:
      containers:
      - name: app
        image: busybox
---
apiVersion: v1
kind: Service
metadata:
  name: zero-replica-statefulset
spec:
  selector:
    type: zero-replica-statefulset
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: hello-cloud
    name: stateful-busybox
    type: zero-replica-statefulset
  name: stateful-busybox
spec:
  serviceName: "zero-replica-statefulset"
  selector:
    matchLabels:
      app: hello-cloud
      name: stateful-busybox
  replicas: 0
  template:
    metadata:
      labels:
        app: hello-cloud
        name: stateful-busybox
        type: zero-replica-statefulset
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: app
        image: busybox
        imagePullPolicy: IfNotPresent
        command: ["tail", "-f", "/dev/null"]
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: standard-mis-matched-lables
spec:
  selector:
    type: mis-matched-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mis-matched-deployment
  labels:
    type: mis-matched-deployment
spec:
  replicas: 0
  selector:
    matchLabels:
      type: mis-matched-pod
  template:
    metadata:
      labels:
        type: mis-matched-pod
    spec:
      containers:
      - name: app
        image: busybox
---
apiVersion: v1
kind: Service
metadata:
  name: standard-lb
spec:
  type: LoadBalancer
  selector:
    type: standard
---
apiVersion: v1
kind: Service
metadata:
  name: standard-with-skip-endpoint-validation-annotation
  annotations:
    krane.shopify.io/skip-endpoint-validation: 'true'
spec:
  selector:
    type: standard
