test/fixtures/for_unit_tests/stateful_set_pod_test.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2019-10-07T16:05:37Z"
  generateName: test-ss-
  labels:
    name: test-ss
    app: hello-cloud
    controller-revision-hash: 2
    statefulset.kubernetes.io/pod-name: test-ss-pod
  name: test-ss
  namespace: default
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: StatefulSet
    name: test-ss
    uid: c31a9b4e-e6dd-11e9-8f47-e6322f98393a
  resourceVersion: "31010"
  uid: 4cf14557-e91c-11e9-8f47-e6322f98393a
spec:
  containers:
  - command:
    - tail
    - -f
    - /dev/null
    image: busybox
    imagePullPolicy: IfNotPresent
    name: app
    ports:
    - containerPort: 80
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-bwg9f
      readOnly: true
  dnsPolicy: ClusterFirst
  nodeName: minikube
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 600
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-bwg9f
    secret:
      defaultMode: 420
      secretName: default-token-bwg9f
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2019-10-07T16:05:37Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2019-10-07T16:05:38Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: null
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2019-10-07T16:05:37Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
    - containerID: docker://949e6b37ad1e85dfeca958bb5a54c459305ef3d87e12d03e1ba90e121701b572
      image: busybox:latest
      imageID: docker-pullable://busybox@sha256:fe301db49df08c384001ed752dff6d52b4305a73a7f608f21528048e8a08b51e
      lastState: {}
      name: app
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2019-10-07T16:05:38Z"
  hostIP: 192.168.64.3
  phase: Running
  podIP: 172.17.0.4
  qosClass: BestEffort #Burstable?
  startTime: "2019-10-07T16:05:37Z"
