test/fixtures/for_unit_tests/stateful_set_test.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: test-ss
  generation: 2
  annotations:
    krane.shopify.io/required-rollout: full
  labels:
    app: hello-cloud
    name: test-ss
  uid: c31a9b4e-e6dd-11e9-8f47-e6322f98393a
spec:
  selector:
    matchLabels:
      name: test-ss
      app: hello-cloud
  serviceName: "test-ss"
  updateStrategy:
    type: RollingUpdate
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-cloud
        name: test-ss
    spec:
      containers:
      - name: app
        image: busybox
        imagePullPolicy: IfNotPresent
        command: ["tail", "-f", "/dev/null"]
status:
  replicas: 2
  readyReplicas: 2
  currentReplicas: 2
  updatedReplicas: 2
  observedGeneration: 2
  currentRevision: 2
  updateRevision: 2
